kubernetes/bar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes/
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: bar
  name: bar
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: bar
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kubernetes/
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: bar
    spec:
      containers:
        - env:
            - name: AGENT_HOSTNAME
              value: otel-collector.default.svc.cluster.local
          image: brentgruber/bar:0.0.1
          name: bar
          resources: {}
      restartPolicy: Always
status: {}
