kubernetes/foo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes/
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: foo
  name: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: foo
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kubernetes/
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: foo
    spec:
      containers:
        - env:
            - name: AGENT_HOSTNAME
              value: otel-collector.default.svc.cluster.local
            - name: BAR_ENDPOINT
              value: http://bar.default.svc.cluster.local:5000/bar
          image: brentgruber/foo:0.0.1
          name: foo
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
