kubernetes/otel-collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes/
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: otel-collector
  name: otel-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: otel-collector
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kubernetes/
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: otel-collector
    spec:
      containers:
        - args:
            - --config=/config/tmp/otel-collector.yaml
          image: otel/opentelemetry-collector:0.25.0
          name: otel-collector
          ports:
            - containerPort: 6831
            - containerPort: 14268
            - containerPort: 4317
          resources: {}
          volumeMounts:
            - mountPath: /config/tmp
              name: otel-collector-claim0
      restartPolicy: Always
      volumes:
        - name: otel-collector-claim0
          configMap:
            defaultMode: 420
            name: otel-config
status: {}
