kubernetes/promtail-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes/
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: promtail
  name: promtail
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: promtail
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kubernetes/
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: promtail
    spec:
      containers:
        - args:
            - -config.file=/etc/promtail/config.yml
          image: grafana/promtail
          name: promtail
          resources: {}
          volumeMounts:
            - mountPath: /var/log
              name: promtail-claim0
      restartPolicy: Always
      volumes:
        - name: promtail-claim0
          persistentVolumeClaim:
            claimName: promtail-claim0
status: {}
