kubernetes/otel-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes/
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: otel-collector
  name: otel-collector
spec:
  ports:
    - name: "6831"
      port: 6831
      targetPort: 6831
    - name: "14268"
      port: 14268
      targetPort: 14268
    - name: "4317"
      port: 4317
      targetPort: 4317
  selector:
    io.kompose.service: otel-collector
status:
  loadBalancer: {}
