kubernetes/tempo-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes/
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: tempo
  name: tempo
spec:
  ports:
    - name: "3101"
      port: 3101
      targetPort: 3100
    - name: "55680"
      port: 55680
      targetPort: 55680
  selector:
    io.kompose.service: tempo
status:
  loadBalancer: {}
