kubernetes/foo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo-ingress
  labels:
    name: foo-ingress
spec:
  rules:
    - host: foo.localhost
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: foo
                port:
                  number: 5000
